# kronos

./: CMakeLists.txt  README.md  dvecmult.cl  fvecmult.cl  kronos_config.h.in  kronoscl.cc  main.cc  util.cc  vecmult.cl
cmake/: FindMKL.cmake  FindOpenCL.cmake
cuda/: CMakeLists.txt  real_t.h
cuda/gemm1/: CMakeLists.txt  matrix_mult.cu  matrix_mult_kernel.h
cuda/gemm2/: CMakeLists.txt  main.cxx  matrix_mult.cu  matrix_mult.h
cuda/gemm3/: CMakeLists.txt  main.cxx  matrix_mult.cu  matrix_mult.h  matrix_sizes.h  mmcublas.cxx  mmcublas.h
cuda/inc_array/: inc_array.cu
eigen/: CMakeLists.txt  dense.cpp  mmap_dense.cpp  self_adjoint_eigen_solver.cpp  sparse.cpp  utils.h
opencl/: CMakeLists.txt
opencl/vecmult/: kronoscl.h  main.cc  vecmult.cl
sandbox/: CMakeLists.txt  inc_array.cu
sandbox/cuda/: CMakeLists.txt
sandbox/cuda/gemm3/: CMakeLists.txt  main.cxx
sandbox/cuda/inc_array/: CMakeLists.txt  inc_array.cu
sandbox/opencl/: CMakeLists.txt
sandbox/opencl/gemm1/: main.cxx
sandbox/opencl/vecmult/: CMakeLists.txt
src/: BlasGemm.cxx  BlasGemm.h  CLGemm.cxx  CLGemm.h  CMakeLists.txt  CpuGemm.cxx  CpuGemm.h  CublasGemm.cxx  CublasGemm.h  CudaGemm.cxx  CudaGemm.h  CudaUtils.h  Endian.h  Gemm.cxx  Gemm.h  MData.cxx  MData.h  MKLGemm.cxx  MKLGemm.h  ViennaCLGemm.cxx  ViennaCLGemm.h  cuda_gemm.cu  cuda_gemm.h  dgemm.cl  gen_dgemm.py  kronos_opencl.cxx  kronos_opencl.h  main.cxx
